<resources>
    <string name="app_name">Yachai</string>
    <string name="open_nav">Abrir Menu</string>
    <string name="close_nav">Cerrar Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="crea_una_cuenta">Crea una cuenta</string>
    <string name="registrarse">Registrarse</string>
</resources>