<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".Login"
    android:layout_margin="20dp"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center"

    android:background="@drawable/layout_roundbg">
    <TextView

        android:text="@string/iniciar_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="25sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/correo"
            android:background="@drawable/rounded_text"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/contrase_a"
            android:id="@+id/contrasena"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"

            android:background="@drawable/rounded_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressbar"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/ingresar"
        android:textColor="@color/white"
        app:cornerRadius="30dp" />

    <TextView
        android:id="@+id/registerNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crea_una_cuenta"/>



</LinearLayout>