<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".Registrar"
    android:layout_margin="20dp"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center"

    android:background="@drawable/layout_roundbg">
    <TextView

        android:text="@string/crea_una_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="25sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"

            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_text"
            android:hint="Nombres" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"

            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_text"
            android:hint="Apellidos" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:hint="Telefono"
            android:id="@+id/telefono"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"

            android:background="@drawable/rounded_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/correo"
            android:background="@drawable/rounded_text"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/contrase_a"
            android:id="@+id/contrasena"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"

            android:background="@drawable/rounded_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        />

    <RadioButton
        android:id="@+id/radiobuttoncheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="De acuerdo con los Términos y Condiciones"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressbar"
        android:visibility="gone"/>
    <Button
        android:id="@+id/btnregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/registrarse"
        android:textColor="@color/white"
        app:cornerRadius="30dp" />

    <TextView
        android:id="@+id/loginNow"
        android:text="@string/iniciar_sesion"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>